correct dist name in Changes file
that's what i get for copy-pasting from another dist, bump VERSION for
CPAN DEV release

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-Revision history for Business-Fixflo
+Revision history for String::CRC32
 
-1.5_01     2017-05-22
+1.5_02     2017-06-23
         - New maintainer: LEEJO
         - Add Changes file
         - Add link to github repo
