A few tidy-ups (#1)
* 'License' is public domain, not perl

* Fix some spelling and grammatical errors

* Ship the LICENSE file

--- a/CRC32.pod
+++ b/CRC32.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-String::CRC32 - Perl interface for cyclic redundency check generation
+String::CRC32 - Perl interface for cyclic redundancy check generation
 
 =head1 SYNOPSIS
 
@@ -19,7 +19,7 @@ String::CRC32 - Perl interface for cyclic redundency check generation
 
 =head1 DESCRIPTION
 
-The B<CRC32> module calculates CRC sums of 32 bit lenghts.
+The B<CRC32> module calculates CRC sums of 32 bit lengths.
 It generates the same CRC values as ZMODEM, PKZIP, PICCHECK and
 many others.
 
@@ -43,7 +43,7 @@ You may even check files:
     $crc = crc32(*SOMEFILE);
     close(SOMEFILE);
 
-A init value may also been supplied in the above example.
+A init value may also have been supplied in the above example.
 
 =head1 AUTHOR
 
