--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for String::CRC32
 
+1.800     2019-11-01
+        - Perldoc tweaks, GH #3, thanks to mattias-p
+
 1.700     2017-07-02
         - Perldoc tweaks, GH #2, thanks to choroba
 
